--- a/index.html
+++ b/index.html
@@ -194,23 +194,19 @@
               </div>
               <div class="seller-icon">
                 <div class="seller-icon-items">
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/cart.png" alt="cart" />
-                    </a>
+                  <div class="seller-icon-items-wrapper">
+                    <img src="./assets/imgs/main/cart.png" alt="cart" />
                   </div>
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/heart.png" alt="heart" />
-                    </a>
+                  <div class="seller-icon-items-wrapper">
+                    <img src="./assets/imgs/main/heart.png" alt="heart" />
                   </div>
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/change.png" alt="change" />
-                    </a>
+                  <div class="seller-icon-items-wrapper">
+                    <img src="./assets/imgs/main/change.png" alt="change" />
                   </div>
                 </div>
               </div>
+
+
               <a href="#">Cruise Dual Analog</a>
               <p>$250.00</p>
             </li>
@@ -371,89 +367,64 @@
             <li class="feature-products-items">
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe1" />
-              </div>
-              <div class="product-desc">
                 <h4>Analog Cruise</h4>
                 <p>$250.00</p>
               </div>
-            </li>
-            <li class="feature-products-items">
+              <!-- <div class="product-desc">
+              </div> -->
+
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe2" />
-              </div>
-              <div class="product-desc">
                 <h4>Crown Submit</h4>
                 <p>$160.00</p>
               </div>
-            </li>
-            <li class="feature-products-items">
+
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe3" />
-              </div>
-              <div class="product-desc">
                 <h4>Joust Dunkent</h4>
                 <p>$950.00</p>
               </div>
-            </li>
-            <li class="feature-products-items">
+
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe4" />
-              </div>
-              <div class="product-desc">
                 <h4>Strive Shoudler</h4>
                 <p>$420.00</p>
               </div>
-            </li>
-            <li class="feature-products-items">
+
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe5" />
-              </div>
-              <div class="product-desc">
                 <h4>Wallet Gums</h4>
                 <p>$310.00</p>
               </div>
             </li>
+
             <li class="feature-products-items">
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe6" />
-              </div>
-              <div class="product-desc">
                 <h4>Impulse Skirt</h4>
                 <p>$350.00</p>
               </div>
-            </li>
-            <li class="feature-products-items">
+
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe7" />
-              </div>
-              <div class="product-desc">
                 <h4>Sneaker Jordan</h4>
                 <p>$650.00</p>
               </div>
-            </li>
-            <li class="feature-products-items">
+
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe8" />
-              </div>
-              <div class="product-desc">
                 <h4>Bag Intense</h4>
                 <p>$560.00</p>
               </div>
-            </li>
-            <li class="feature-products-items">
+
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe9" />
-              </div>
-              <div class="product-desc">
                 <h4>Earing Doodle</h4>
                 <p>$850.00</p>
               </div>
-            </li>
-            <li class="feature-products-items">
+
               <div class="product-wrapper">
                 <img src="./assets/imgs/main/feature_items.png" alt="fe10" />
-              </div>
-              <div class="product-desc">
                 <h4>Ring Diamond</h4>
                 <p>$680.00</p>
               </div>
