fix_bug_hover_seller

--- a/index.html
+++ b/index.html
@@ -187,113 +187,101 @@
 
           <ul class="seller-products">
             <li class="seller-products-items">
-              <div class="seller-click">
-                <a href="#">
+              <div class="seller-position">
+                <div class="seller-click">
                   <img src="./assets/imgs/main/sneaker.jpg" alt="sneaker" />
-                </a>
-              </div>
-              <div class="seller-icon">
-                <div class="seller-icon-items">
-                  <div class="seller-icon-items-wrapper">
+                </div>
+
+                <div class="seller-bg"></div>
+
+                <div class="seller-base">
+                  <div class="seller-base-wrapper">
                     <img src="./assets/imgs/main/cart.png" alt="cart" />
                   </div>
-                  <div class="seller-icon-items-wrapper">
+                  <div class="seller-base-wrapper">
                     <img src="./assets/imgs/main/heart.png" alt="heart" />
                   </div>
-                  <div class="seller-icon-items-wrapper">
+                  <div class="seller-base-wrapper">
                     <img src="./assets/imgs/main/change.png" alt="change" />
                   </div>
                 </div>
               </div>
-
 
               <a href="#">Cruise Dual Analog</a>
               <p>$250.00</p>
             </li>
 
             <li class="seller-products-items">
-              <div class="seller-click">
-                <a href="#">
+              <div class="seller-position">
+                <div class="seller-click">
                   <img src="./assets/imgs/main/tee.jpg" alt="tee1" />
-                </a>
-              </div>
-              <div class="seller-icon">
-                <div class="seller-icon-items">
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/cart.png" alt="cart" />
-                    </a>
+                </div>
+
+                <div class="seller-bg"></div>
+
+                <div class="seller-base">
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/cart.png" alt="cart" />
                   </div>
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/heart.png" alt="heart" />
-                    </a>
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/heart.png" alt="heart" />
                   </div>
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/change.png" alt="change" />
-                    </a>
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/change.png" alt="change" />
                   </div>
                 </div>
               </div>
+
               <a href="#">Crown Summit Backpack</a>
               <p>$150.00</p>
             </li>
 
             <li class="seller-products-items">
-              <div class="seller-click">
-                <a href="#">
+              <div class="seller-position">
+                <div class="seller-click">
                   <img src="./assets/imgs/main/tee.jpg" alt="tee2" />
-                </a>
-              </div>
-              <div class="seller-icon">
-                <div class="seller-icon-items">
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/cart.png" alt="cart" />
-                    </a>
+                </div>
+
+                <div class="seller-bg"></div>
+
+                <div class="seller-base">
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/cart.png" alt="cart" />
                   </div>
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/heart.png" alt="heart" />
-                    </a>
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/heart.png" alt="heart" />
                   </div>
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/change.png" alt="change" />
-                    </a>
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/change.png" alt="change" />
                   </div>
                 </div>
               </div>
+
               <a href="#">Joust Duffle Bag</a>
               <p>$330.00</p>
             </li>
 
             <li class="seller-products-items">
-              <div class="seller-click">
-                <a href="#">
+              <div class="seller-position">
+                <div class="seller-click">
                   <img src="./assets/imgs/main/tee.jpg" alt="tee3" />
-                </a>
-              </div>
-              <div class="seller-icon">
-                <div class="seller-icon-items">
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/cart.png" alt="cart" />
-                    </a>
+                </div>
+
+                <div class="seller-bg"></div>
+
+                <div class="seller-base">
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/cart.png" alt="cart" />
                   </div>
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/heart.png" alt="heart" />
-                    </a>
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/heart.png" alt="heart" />
                   </div>
-                  <div class="background">
-                    <a href="#">
-                      <img src="./assets/imgs/main/change.png" alt="change" />
-                    </a>
+                  <div class="seller-base-wrapper">
+                    <img src="./assets/imgs/main/change.png" alt="change" />
                   </div>
                 </div>
               </div>
+
               <a href="#">Voyage Yoga Bag</a>
               <p>$270.00</p>
             </li>
@@ -446,7 +434,7 @@
               <p>Register email for special discount!</p>
             </div>
             <form id="form_mail" class="form-mail">
-              <input type="text" placeholder="E-mail address ..." required />
+              <input type="email" placeholder="E-mail address ..." required />
               <button class="form-mail-btn">GET COUPON NOW</button>
             </form>
           </div>
